<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PeopleBehindActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="378dp"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/button4"
                android:layout_width="337dp"
                android:layout_height="41dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="25dp"
                android:text="@string/objectives" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/client"
                android:textSize="36sp"
                android:textStyle="bold" />

            <android.support.v7.widget.CardView
                android:layout_width="350dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="2dp"
                android:layout_marginEnd="199dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="199dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="361dp"
                    android:layout_height="168dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/dr_florence_rochelle_gan"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:layout_marginTop="50dp"
                    android:gravity="start"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingStart="15dp"
                    android:text="@string/gan"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="110dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:text="@string/email"
                    android:textSize="18sp" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="348dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginEnd="199dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="199dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="25dp">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="361dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/iics_cnag_comdev"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:layout_marginTop="50dp"
                    android:gravity="start"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingStart="15dp"
                    android:text="@string/insert_info_here"
                    android:textSize="18sp" />

            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/developers"
                android:textSize="36sp"
                android:textStyle="bold" />

            <android.support.v7.widget.CardView
                android:layout_width="348dp"
                android:layout_height="619dp"
                android:layout_marginBottom="2dp"
                android:layout_marginEnd="199dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="199dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="25dp">

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="575dp"
                    android:gravity="start"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:text="@string/cathemail"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/catherine_bhel_carcha"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="328dp"
                    android:layout_height="505dp"
                    android:layout_marginTop="50dp"
                    android:gravity="center|start"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingStart="15dp"
                    android:text="@string/cathy"
                    android:textSize="18sp" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="348dp"
                android:layout_height="480dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="25dp">

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="425dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:text="@string/domsemail"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dominic_casino"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/19"
                    android:layout_width="330dp"
                    android:layout_height="356dp"
                    android:layout_marginTop="50dp"
                    android:gravity="start"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingStart="15dp"
                    android:text="@string/doms"
                    android:textSize="18sp" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="348dp"
                android:layout_height="437dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="25dp">

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="375dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:text="@string/scottemail"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scott_pons"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="330dp"
                    android:layout_height="310dp"
                    android:layout_marginTop="50dp"
                    android:gravity="start"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingStart="15dp"
                    android:text="@string/scott"
                    android:textSize="18sp" />

            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>