<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutUsActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="378dp"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/button4"
                android:layout_width="337dp"
                android:layout_height="41dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="25dp"
                android:text="@string/people_behind_healthy_foodie"
                android:layout_marginStart="20dp" />

            <android.support.v7.widget.CardView
                android:layout_width="348dp"
                android:layout_height="391dp"
                android:layout_marginBottom="2dp"
                android:layout_marginEnd="199dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="199dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="30dp">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="361dp"
                    android:layout_height="match_parent"
                    android:text="@string/objectives"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="331dp"
                    android:layout_height="324dp"
                    android:layout_marginTop="50dp"
                    android:gravity="center"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingStart="15dp"
                    android:text="@string/obj"
                    android:textSize="18sp" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="348dp"
                android:layout_height="331dp"
                android:layout_marginBottom="2dp"
                android:layout_marginEnd="199dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="199dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="25dp">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/purpose"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="328dp"
                    android:layout_height="274dp"
                    android:layout_marginTop="50dp"
                    android:gravity="center"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingStart="15dp"
                    android:text="@string/pur"
                    android:textSize="18sp" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="348dp"
                android:layout_height="325dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="25dp">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_perspective"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="330dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:gravity="center"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingStart="15dp"
                    android:text="@string/perspective"
                    android:textSize="18sp" />
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>